<resources>
    <string name="app_name">LateOrLatte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_hello">Добро пожаловать в Late or Latte! Введи номер телефона или электронную почту</string>
    <string name="phone_number_text">Номер телефона</string>
    <string name="email_text">Электронная почта</string>
    <string name="Submit_text">Подтвердить</string>
    <string name="new_meeting_title">Новая встреча</string>
    <string name="location_text">Место встечи</string>
    <string name="show_on_map_text">Указать на карте</string>
    <string name="create_meeting_text">Создать встречу</string>
    <string name="meeting_date_text">Дата встречи</string>
    <string name="meeting_time_text">Время встречи</string>
    <string name="new_meeting_choose_address_text">Выбрать место встречи</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps_search_place">Search</string>
    <string name="menu_my_events">Мои встречи</string>
</resources>
