<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMeetingFragment">

    <TextView
        android:id="@+id/new_meeting_phone_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/phone_number_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_meeting_phone_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/new_meeting_add_participant_iv"
        app:layout_constraintStart_toStartOf="@+id/new_meeting_phone_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_meeting_phone_tv" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/new_meeting_phones_chg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="@+id/new_meeting_phone_tv"
        app:layout_constraintStart_toStartOf="@+id/new_meeting_phone_et"
        app:layout_constraintTop_toBottomOf="@+id/new_meeting_phone_et" />

    <TextView
        android:id="@+id/new_meeting_location_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/location_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_meeting_phones_chg" />

    <EditText
        android:id="@+id/new_meeting_location_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/new_meeting_location_tv"
        app:layout_constraintStart_toStartOf="@+id/new_meeting_location_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_meeting_location_tv" />

    <TextView
        android:id="@+id/new_meeting_show_on_map_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/show_on_map_text"
        app:layout_constraintEnd_toEndOf="@+id/new_meeting_location_et"
        app:layout_constraintStart_toStartOf="@+id/new_meeting_location_et"
        app:layout_constraintTop_toBottomOf="@+id/new_meeting_location_et" />

    <Button
        android:id="@+id/new_meeting_create_meeting_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_meeting_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_meeting_show_on_map_tv"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/new_meeting_add_participant_iv"
        android:layout_width="36dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/new_meeting_phone_et"
        app:layout_constraintEnd_toEndOf="@+id/new_meeting_phone_tv"
        app:layout_constraintTop_toTopOf="@+id/new_meeting_phone_et"
        android:src="@drawable/ic_check" />

</androidx.constraintlayout.widget.ConstraintLayout>